[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Shawn Wilsher", email = "me@shawnwilsher.com" },
]
dependencies = [
	"aiobrultech-serial ==0.9.0",
	"aiomqtt ==1.2.1",
	"jinja2 >= 3.0, < 4",
	"pyserial == 3.5",
	"pyyaml >= 6.0, <= 7",
	"voluptuous ==0.15.2",
]
dynamic = [
    "version",
]
license = {file = "LICENSE"}
name = "brultech-serial2mqtt"
readme = "README.md"
requires-python = ">=3.13,<4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Change this to `true` to debug tests!
log_cli = false
log_cli_level = "DEBUG"

[tool.isort]
profile = "black"
src_paths = ["brultech_serial2mqtt", "tests"]

[tool.pyright]
include = [
    "brultech_serial2mqtt",
    "tests",
]
exclude = [
    "**/__pycache__",
    "typings",
]
reportConstantRedefinition = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidTypeVarUse = "error"
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportMissingTypeArgument = "error"
reportOverlappingOverload = "error"
reportPrivateUsage = "error"
reportUnknownMemberType = "none"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
typeCheckingMode = "strict"

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "brultech_serial2mqtt",
]
