[metadata]
name = brultech-serial2mqtt
author = Shawn Wilsher
author_email = me@shawnwilsher.com
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[options]
python_requires = >=3.8, <4
packages = find:
install_requires = 
	aiobrultech-serial == 0.4.0
	asyncio-mqtt == 0.10.0
	pyserial == 3.5
	pyyaml == 5.4.1
	voluptuous == 0.12.1

[flake8]
max-line-length = 88
max-complexity = 10
select = E9,F63,F7,F82

